<resources>
    <string name="app_name">Notes App</string>
    <string name="example">Example</string>
    <string name="addNote">Add note</string>
    <string name="stringEditNote">Edit text</string>
    <string name="stringNoteName">Name</string>
    <string name="stringNoteText">Text</string>
    <string name="stringStartTyping">Type your note here</string>
    <string name="stringSave">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stringAddFirstNote">Add your first note!</string>
    <string name="stringGoBack">Go back</string>
    <string name="stringBold">B</string>
    <string name="stringCopy">Copy</string>
    <string name="stringCut">Cut</string>
    <string name="stringPaste">Paste</string>
    <string name="stringMenuBold">Bold</string>
    <string name="stringItalic">Italic</string>
    <string name="stringFormat">Format</string>
    <string name="stringMonospace">Monospace</string>
    <string name="stringUnderline">Underline</string>
    <string name="stringNormal">Normal</string>
    <string name="stringSettings">Settings</string>
</resources>